updated the homepage to .

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sip615.github.io/react-portfolio-project/",
+  "homepage": ".",
   "name": "portfolio-project",
   "version": "0.1.0",
   "private": true,
