--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "portfolio-project",
   "version": "0.1.0",
   "private": true,
@@ -19,6 +18,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.2",
+    "react-https-redirect": "^1.1.0",
     "react-particles-js": "^3.4.1",
     "react-popupbox": "^2.0.8",
     "react-scripts": "4.0.1",
